# Backup

./: .gitignore  .project  Backup.cabal  Backup.xaml  Setup.hs
Test/: Simple.xaml
src/: BackupSuite.hs  Compressor.hs  DirScanner.hs  Main.hs  Options.hs  Test.hs  ZipArchive.hs
src/System/: Filesystem.hs
