name:           Backup
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Koehler

executable Backup
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   filepath >=1.3.0 && <1.4,
                   Glob >=0.7.5 && <0.8,
                   lens >=4.3 && <4.4,
                   aeson,
                   yaml,
                   misc-tools,
                   containers,
                   system-filepath
  ghc-options:     -Wall
  other-modules:   
                   BackupSuite,
                   DirScanner,
                   Compressor

test-suite Test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, HTF > 0.9,
                   directory >=1.2.0 && <1.3
  other-modules:   
                   BackupSuite,
                   Compressor
  hs-source-dirs:  src

