name:           Backup
version:        1.1
cabal-version:  >=1.2
build-type:     Custom
author:         Koehler

executable Backup
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
                   base -any,
                   filepath -any,
                   Glob >= 0.7 && < 1.0,
                   lens >= 4.15.1 && < 5.0,
                   aeson >= 1.0.2.1 && < 2.0,
                   yaml >= 0.8 && < 1.0,
                   containers -any,
                   temporary >= 1.2 && < 2.0,
                   process -any,
                   bytestring -any,
                   time -any,
                   old-locale >= 1.0.0.7 && < 2.0,
                   directory -any,
                   zip-archive >= 0.3.0.5 && < 1.0
  ghc-options:     -Wall -rtsopts
  other-modules:
                   BackupSuite,
                   DirScanner,
                   Compressor,
                   Options,
                   System.Filesystem

test-suite Test
  type:            exitcode-stdio-1.0
  main-is:         Test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:
                   base -any,
                   HTF >= 0.13.1 && < 0.14,
                   directory -any
  other-modules:
                  BackupSuite,
                  DirScanner,
                  Compressor,
                  Options,
                  System.Filesystem
  hs-source-dirs:  src
